# kotprog-neptun-automation

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
kotprog_neptun_automation/: automation.py  data_classes.py
